syntax = "proto3";

package subscription;

service SubscriptionService {
  // Subscription operations
  rpc CreateSubscription (CreateSubscriptionRequest) returns (SubscriptionResponse);
  rpc GetSubscriptionById (SubscriptionByIdRequest) returns (SubscriptionResponse);
  rpc GetSubscriptionsByCustomer (SubscriptionsByCustomerRequest) returns (SubscriptionListResponse);
  rpc GetSubscriptionsByOwner (SubscriptionsByOwnerRequest) returns (SubscriptionListResponse);
  rpc GetAllSubscriptions (Empty) returns (SubscriptionListResponse);
  rpc CancelSubscription (CancelSubscriptionRequest) returns (SubscriptionResponse);
  rpc RenewSubscription (RenewSubscriptionRequest) returns (SubscriptionResponse);
  rpc ChangePlan (ChangePlanRequest) returns (SubscriptionResponse);
  rpc UpdateSubscriptionStatus (UpdateStatusRequest) returns (SubscriptionResponse);
  rpc ActivateSubscription (ActivateSubscriptionRequest) returns (SubscriptionResponse);
  rpc GetSubscriptionStats (Empty) returns (SubscriptionStatsResponse);
  
  // Trial management
  rpc CheckTrialExpiry (Empty) returns (TrialExpiryResponse);
  
  // =================== STRIPE INTEGRATION ===================
  // Check subscription status and quota (for other services like project-svc)
  rpc CheckSubscriptionStatus (CheckSubscriptionStatusRequest) returns (SubscriptionStatusResponse);
  rpc GetPlanLimits (GetPlanLimitsRequest) returns (PlanLimitsResponse);
  rpc GetActiveSubscription (GetActiveSubscriptionRequest) returns (SubscriptionResponse);
  
  // Handle webhook events from payment-svc
  rpc HandlePaymentSucceeded (PaymentSucceededEvent) returns (WebhookHandleResponse);
  rpc HandleSubscriptionUpdated (StripeSubscriptionEvent) returns (WebhookHandleResponse);
  rpc HandleSubscriptionDeleted (StripeSubscriptionEvent) returns (WebhookHandleResponse);
  rpc HandleInvoicePaid (InvoicePaidEvent) returns (WebhookHandleResponse);
  
  // Addon operations
  rpc ListAddons (ListAddonsRequest) returns (AddonListResponse);
  rpc GetAddonByKey (AddonByKeyRequest) returns (AddonResponse);
  rpc CreateAddon (CreateAddonRequest) returns (AddonResponse);
  rpc PurchaseAddons (PurchaseAddonsRequest) returns (UserAddonListResponse);
  rpc GetUserAddons (UserAddonsBySubscriptionRequest) returns (UserAddonListResponse);
  rpc CancelAddon (CancelAddonRequest) returns (UserAddonResponse);
}

// Common messages
message Empty {}

// Subscription messages
message Subscription {
  string id = 1;
  string customerId = 2;
  string planId = 3;
  string planName = 4;
  double amount = 5;
  string billingCycle = 6;
  string status = 7;
  string currentPeriodStart = 8;
  string currentPeriodEnd = 9;
  bool isTrialUsed = 10;
  string trialStart = 11;
  string trialEnd = 12;
  bool cancelAtPeriodEnd = 13;
  string cancelledAt = 14;
  string cancellationReason = 15;
  string createdAt = 16;
  string updatedAt = 17;
  string ownerId = 18;
}

message CreateSubscriptionRequest {
  string customerId = 1;
  string planId = 2;
  string promotionCode = 3;
  bool useTrial = 4;
  string ownerId = 5;
}

message SubscriptionByIdRequest {
  string id = 1;
}

message SubscriptionsByCustomerRequest {
  string customerId = 1;
}

message SubscriptionsByOwnerRequest {
  string ownerId = 1;
}

message CancelSubscriptionRequest {
  string id = 1;
  string reason = 2;
  bool cancelAtPeriodEnd = 3;
}

message RenewSubscriptionRequest {
  string id = 1;
}

message ChangePlanRequest {
  string id = 1;
  string newPlanId = 2;
  bool immediate = 3;
}

message UpdateStatusRequest {
  string id = 1;
  string newStatus = 2;
  string reason = 3;
}

message ActivateSubscriptionRequest {
  string subscriptionId = 1;
}

message SubscriptionResponse {
  Subscription subscription = 1;
  string message = 2;
}

message SubscriptionListResponse {
  repeated Subscription subscriptions = 1;
  string message = 2;
}

message TrialExpiryResponse {
  int32 processed = 1;
  int32 converted = 2;
  int32 failed = 3;
  string message = 4;
}

// Addon messages
message Addon {
  string id = 1;
  string addonKey = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  string billingPeriod = 6;
  bool isActive = 7;
  string features = 8; // JSON string
  string createdAt = 9;
  string updatedAt = 10;
}

message UserAddon {
  string id = 1;
  string subscriptionId = 2;
  string addonId = 3;
  string customerId = 4;
  double price = 5;
  string status = 6;
  string purchasedAt = 7;
  string expiresAt = 8;
  string nextBillingDate = 9;
  string cancelledAt = 10;
}

message AddonByKeyRequest {
  string key = 1;
}

message ListAddonsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message CreateAddonRequest {
  string addonKey = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string billingPeriod = 5;
  string features = 6; // JSON string
}

message PurchaseAddonsRequest {
  string subscriptionId = 1;
  string customerId = 2;
  repeated string addonKeys = 3;
}

message UserAddonsBySubscriptionRequest {
  string subscriptionId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message CancelAddonRequest {
  string id = 1;
}

message AddonResponse {
  Addon addon = 1;
  string message = 2;
}

message AddonListResponse {
  repeated Addon addons = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
  string message = 6;
}

message UserAddonResponse {
  UserAddon userAddon = 1;
  string message = 2;
}

message UserAddonListResponse {
  repeated UserAddon userAddons = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
  string message = 6;
}

message SubscriptionStatsResponse {
  int32 activeCount = 1;
  int32 cancelledCount = 2;
  int32 churnedCount = 3;
  double monthlyRevenue = 4;
  double totalRevenue = 5;
  double avgSubscriptionValue = 6;
}

// =================== STRIPE INTEGRATION MESSAGES ===================

// Check subscription status for quota checking
message CheckSubscriptionStatusRequest {
  string customerId = 1;
}

message SubscriptionStatusResponse {
  bool isActive = 1;
  string status = 2;  // active, trial, expired, cancelled
  string planId = 3;
  string planName = 4;
  string currentPeriodEnd = 5;
  bool cancelAtPeriodEnd = 6;
  optional string stripeSubscriptionId = 7;
}

// Get plan limits (for quota checking)
message GetPlanLimitsRequest {
  string customerId = 1;
  optional string planId = 2;
}

message PlanLimitsResponse {
  bool isActive = 1;
  string planId = 2;
  string planName = 3;
  int32 maxProjects = 4;
  int32 maxTeamMembers = 5;
  int32 maxStorageGb = 6;
  int32 maxApiCalls = 7;
  repeated string features = 8;
  string currentPeriodEnd = 9;
}

// Get active subscription
message GetActiveSubscriptionRequest {
  string customerId = 1;
}

// Webhook event handlers (called by payment-svc)
message PaymentSucceededEvent {
  string paymentId = 1;
  string customerId = 2;
  string orderId = 3;
  double amount = 4;
  string stripePaymentIntentId = 5;
  string subscriptionId = 6;
}

message StripeSubscriptionEvent {
  string stripeSubscriptionId = 1;
  string stripeCustomerId = 2;
  string status = 3;
  string currentPeriodStart = 4;
  string currentPeriodEnd = 5;
  bool cancelAtPeriodEnd = 6;
  optional string canceledAt = 7;
  map<string, string> metadata = 8;
}

message InvoicePaidEvent {
  string stripeInvoiceId = 1;
  string stripeSubscriptionId = 2;
  string stripeCustomerId = 3;
  double amountPaid = 4;
  string currency = 5;
  string paidAt = 6;
}

message WebhookHandleResponse {
  bool success = 1;
  string message = 2;
}

